# MGOpt_TLC

./: README.md  area_2d.m  build_mex.m  cellUnion.m  circle_2d.m  deleteIso.m  drawmesh.m  findBoundary.m  fun_grad_diag.m  fun_grad_hessian.m  getTriTri.m  ij2nzIdxs.cpp  lineSearch2.m  lineSearchV.m  lineSearchV2.m  main.m  meshAngles.m  optimize.m  optimizeNewton.m  optimizeNewtonV.m  plotMeshWithFlip2d.m  postProcess.m  postProcess2.m  tutte.m  writeOBJ.m
mex/: CMakeLists.txt  SpMV.cpp  accumarray2.cpp  blkSolve.cpp  en4d.cpp  en4dwithPre.cpp  enPre.cpp  en_grad_diag.cpp  en_grad_diag2.cpp  en_grad_diag3.cpp  en_grad_hessian.cpp  en_grad_hessian2.cpp
mex/include/: transfer.h
surface_multigrid/libigl/include/igl/: per_vertex_point_to_plane_quadrics.cpp  per_vertex_point_to_plane_quadrics.h
surface_multigrid/mex/: CMakeLists.txt  main.cpp
surface_multigrid/src/: SSP_collapse_edge.cpp  SSP_collapse_edge.h  SSP_decimate.cpp  SSP_decimate.h  SSP_midpoint.cpp  SSP_midpoint.h  SSP_qslim.cpp  SSP_qslim.h  SSP_qslim_optimal_collapse_edge_callbacks.cpp  SSP_qslim_optimal_collapse_edge_callbacks.h  SSP_random_qslim.cpp  SSP_random_qslim.h  SSP_vertexRemoval.cpp  get_prolong.cpp  get_prolong.h  joint_lscm.cpp  joint_lscm.h  mg_data.h  mg_precompute.cpp  mg_precompute.h  mg_precompute_block.cpp  mg_precompute_block.h  mqwf_dense.cpp  mqwf_dense.h  mqwf_dense_data.h  query_fine_to_coarse.cpp  query_fine_to_coarse.h  res.txt  write_matrix.h
